<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceScreen
    android:id="@+id/info"
    android:key="info"
    android:title="@string/app_name"
    android:summary="@string/click_to_web">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="http://www.supercab.com" />
  </PreferenceScreen>
  <PreferenceCategory android:title="@string/server_preferences">
    <EditTextPreference
      android:id="@+id/server_url"
      android:key="server_url"
      android:defaultValue="@string/default_server_url"
      android:title="@string/server_url"
      android:inputType="textNoSuggestions"
      android:dialogTitle="@string/change_server_url" />
    <EditTextPreference
      android:id="@+id/username"
      android:key="username"
      android:title="@string/username"
      android:inputType="textNoSuggestions"
      android:dialogTitle="@string/change_username" />
    <EditTextPreference
      android:id="@+id/password"
      android:key="password"
      android:title="@string/password"
      android:inputType="textNoSuggestions"
      android:dialogTitle="@string/change_password" />
    <!-- android:password="true" -->
    <!--

    <EditTextPreference
      android:id="@+id/formlist_url"
      android:key="formlist_url"
      android:title="@string/formlist_url"
      android:inputType="textNoSuggestions"
      android:defaultValue="@string/default_odk_formlist"
      android:dialogTitle="@string/change_formlist_url" />
    <EditTextPreference
      android:id="@+id/submission_url"
      android:key="submission_url"
      android:title="@string/submission_url"
      android:inputType="textNoSuggestions"
      android:defaultValue="@string/default_odk_submission"
      android:dialogTitle="@string/change_submission_url" />
    -->

  </PreferenceCategory>
  <PreferenceCategory android:title="@string/client">
    <ListPreference
      android:id="@+id/font_size"
      android:key="font_size"
      android:title="@string/font_size"
      android:dialogTitle="@string/change_font_size"
      android:defaultValue="21"
      android:entries="@array/font_size_entries"
      android:entryValues="@array/font_size_entry_values" />
  </PreferenceCategory>
</PreferenceScreen>
