<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2009 University of Washington Licensed under the Apache
  License, Version 2.0 (the "License"); you may not use this file except in
  compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software distributed
  under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
  OR CONDITIONS OF ANY KIND, either express or implied. See the License for
  the specific language governing permissions and limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/rl"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:layout_marginBottom="0dp"
  android:layout_marginLeft="0dp"
  android:layout_marginRight="0dp"
  android:layout_marginTop="0dp"
  android:padding="0dp" >

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >

    <!--
    <ImageView
      android:id="@+id/logo_header"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:paddingBottom="1dp"
      android:paddingTop="6dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:src="@drawable/logo_big"
      />
    <TextView
      android:id="@+id/main_menu_header"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:paddingBottom="1dp"
      android:paddingTop="6dp"
      android:text="@string/app_name"
      android:textSize="21dp"
      android:textStyle="bold" />

    android:layout_centerInParent="true"
         -->

  </LinearLayout>

  <ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
      android:id="@+id/linearLayout1"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:orientation="vertical" >

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/change_username"
        android:textSize="14dp"
        android:layout_marginLeft="7dp"
        />
      <EditText
        android:id="@+id/edit_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"

        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
      
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/change_email"
        android:textSize="14dp"
        android:layout_marginLeft="7dp"
        />
      <EditText
        android:id="@+id/edit_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"

        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="2dp"
        android:paddingTop="1dp"
        android:text="@string/change_password"
        android:textSize="14dp"
        android:layout_marginLeft="7dp"
        />
      <EditText
        android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"

        android:inputType="textPassword"
        android:singleLine="true"
        android:password="true"
        android:imeOptions="actionGo"
        />
      
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="2dp"
        android:paddingTop="1dp"
        android:text="@string/confirm_password"
        android:textSize="14dp"
        android:layout_marginLeft="7dp"
        />
      <EditText
        android:id="@+id/edit_password_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"

        android:inputType="textPassword"
        android:singleLine="true"
        android:password="true"
        android:imeOptions="actionGo"
        />
      
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/change_first_name"
        android:textSize="14dp"
        android:layout_marginLeft="7dp"
        />
      <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"

        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
      
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/change_last_name"
        android:textSize="14dp"
        android:layout_marginLeft="7dp"
        />
      <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"

        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

      <!--
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/pick_user_type"
        android:textSize="14dp"
        android:layout_marginLeft="7dp"
        />
      <Spinner
        android:id="@+id/pick_user_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"

        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
        -->

  </LinearLayout>
</ScrollView>
<!--

  android:layout_above="@+id/loginButton"
  android:layout_alignParentBottom="true"
         -->

<Button
  android:id="@+id/registerButton"
  android:layout_width="144dp"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@+id/scrollView1"
  android:layout_marginTop="7dp"
  android:gravity="center"
  android:text="@string/register"
  android:onClick="onRegisterButtonClicked"
  />

</RelativeLayout>
